fixed bad merge, redid nav bar spacing, and footer spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,27 +32,27 @@ p {
     width: 100%;
 	z-index: 1;
 	font-size: 1.2em;
-	list-style: none; 
-	text-align: center; 
+	list-style: none;
+	text-align: center;
 }
 
 #nav_bar ul {
-    display: inline-block;
+  display: inline-block;
 	list-style-type: none;
-	margin-top: 1.5em; 
+	margin-top: 1.1em;
 }
 
 #nav_bar li {
 	float: left;
 	margin-right: 2em;
-	color: white; 
+	color: white;
 	/**border-top: 3px solid white; **/
 }
 
 #nav_bar li a{
     display: block;
     text-decoration: none;
-	color: white; 
+	color: white;
 }
 
 #nav_bar li a:hover {
@@ -73,29 +73,29 @@ p {
 
 #event_container {
     font-family: 'Montserrat', sans-serif;
-    width: 100%; 
-	margin-top: -1em; 
+    width: 100%;
+	margin-top: -1em;
     height: 10em;
-	background-color: beige; 
-	list-style: none; 
-	text-align: center; 
+	background-color: beige;
+	list-style: none;
+	text-align: center;
 }
 
 #event_container ul {
     display: inline-block;
 	list-style-type: none;
-	margin-top: 3em; 
+	margin-top: 3em;
 }
 
 #event_container li {
-	float: left; 
-	color: black; 
+	float: left;
+	color: black;
 	display: block;
     text-decoration: none;
 }
 
 #event_info {
-	width: 24em; 
+	width: 24em;
 }
 
 #info{
@@ -105,17 +105,17 @@ p {
 
 #info > h3{
 	margin: 0.4em;
-	text-align: center; 
+	text-align: center;
 }
 
 #info > h4{
 	margin: 0.4em;
-	text-align: center; 
+	text-align: center;
 }
 
 #icon {
     margin-left: -14em;
-	margin-top:-4.5em; 
+	margin-top:-4.5em;
 }
 
 .content {
@@ -132,9 +132,9 @@ p {
 
 iframe{
 	display: block;
-    margin-top: 2em; 
-	margin-bottom: 2em; 
-	margin-left: auto; 
+    margin-top: 2em;
+	margin-bottom: 2em;
+	margin-left: auto;
 	margin-right: auto;
 }
 
@@ -215,7 +215,8 @@ iframe{
     top: 50%;
     padding-top: 30px;
     padding-bottom: 10px;
-
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .soc li {
